--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <p>Let me describe the
       <i>real</i>
       perfect-ass website which still has the glory of the past
-      <span class="mfw">motherfuckingwebsite</span>
-      s:
+      <span class="mfw">motherfuckingwebsite</span>s:
     </p>
     <ul>
       <li>Shit doesn't weigh a ton (in fact it's just 34.97 KB when the 27.83KB cat picture below is removed)</li>
@@ -36,14 +35,13 @@
       <li>Every asshole that visits this website can use it without any problem
         <small>well, kind of</small>
       </li>
-      <li>It's <a href="https://www.w3.org/TR/WCAG20/">accessible</a>
-        , so everyone can enjoy it
+      <li>It's <a href="https://www.w3.org/TR/WCAG20/">accessible</a>, so everyone can enjoy it
         <small>but not everyone can read this - this text is Ant-Accessible</small>
       </li>
       <li>Shit is
         <i>even more</i>
         legible than the fucking two previous versions - and it also has a cleanish style without looking like an
-        <a href="https://en.wikipedia.org/wiki/ARPANET">ARPANET</a>'s website'
+        <a href="https://en.wikipedia.org/wiki/ARPANET">ARPANET</a> website
       </li>
       <li>Doesn't load massive images or scripts. We should all care about people who still use
         <a href="https://en.wikipedia.org/wiki/IP_over_Avian_Carriers">IPoAC</a>
@@ -61,7 +59,7 @@
       <li>Images aren't forbidden, but when SVG is available
         <i>JUST USE IT</i>.
       </li>
-      <li>use <i>some</i> fucking
+      <li>Use <i>some</i> fucking
         <span class="colored" id="rbw" style="color: rgb(71, 180, 235);">colors</span>.
       </li>
       <li>Links don't really need to keep that
@@ -81,11 +79,11 @@
       <li>It uses the TLD, too: bestmotherfucking.website, check out <a href="http://domainr.com/">domainr</a> to do something cool too.</li>
       <li>It uses the kickassing <a href="https://letsencrypt.org/">Let's Encrypt</a> CA (don't you see the gorgeous green lock?)</li>
       <li>It runs on <a href="https://nginx.com/">nginx</a>: the best fucking web server instead of Apache Server</li>
-      <li>It uses <a href="js/jquery-2.2.4.min.js">a custom version</a> of the awesome <a href="http://jquery.com/">ultra-lightweight jQuery</a><b>/s</b></li>
+      <li>It uses <a href="js/jquery-2.2.4.min.js">a custom version</a> of the awesome <a href="http://jquery.com/">ultra-lightweight jQuery</a><b> /s</b></li>
       <li>It doesn't use a single media query <small>well, not really</small></li>
       <li>It probably doesn't support all the web browsers, but that's the best thing - if the user's browser is outdated he will notice and maybe he will switch from <a href="https://microsoft.com/ie">the crap he uses</a> to <a href="https://mozilla.com/firefox">a much cooler browser</a></li>
       <li>It uses some cool technologies like JavaScript <img src="img/js.svg" alt="JavaScript logo">, CSS3 <img src="img/css3.svg" alt="CSS3 Logo"> and HTML5 <img src="img/html5.svg" alt="HTML5 logo"></li>
-      <li>It support <a href="https://en.wikipedia.org/wiki/HTTP/2">HTTP/2</a></li>
+      <li>It supports <a href="https://en.wikipedia.org/wiki/HTTP/2">HTTP/2</a></li>
       <li>It includes a Cache-Control header, so you don't waste your precious bandwidth if you visit the website more than once</li>
       <li>It uses <a href="https://piwik.org/">Piwik</a>, a free and Open Source analytics platform (we still love you Google, don't be mad at us)</li>
       <li>It allows universal access from every website via <a href="https://enable-cors.org/">CORS</a></li>
